--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <link rel="icon" type="image/png" href="favicon.png" />
+
     <title>HalloType</title>
 
     <link rel="stylesheet" href="css/reset.css" />
@@ -47,13 +49,13 @@
     <div id="main">
       <div class="project">
   <div class="cover">
-    <a href="piksels.html">
+    <a href="Piksels.html">
       <img src="content/piksels/cover.gif" />
     </a>
   </div>
 
   <div class="title">
-    <a href="piksels.html">piksels</a>
+    <a href="Piksels.html">Piksels</a>
   </div>
   <div class="tags"><ol><li>type</li><li>pixel</li></ol></div>
 </div>
@@ -73,15 +75,28 @@
 <div class="clear"></div>
 <div class="project">
   <div class="cover">
-    <a href="golf.html">
+    <a href="Golf.html">
       <img src="content/wave/cover.gif" />
     </a>
   </div>
 
   <div class="title">
-    <a href="golf.html">golf</a>
+    <a href="Golf.html">Golf</a>
   </div>
   <div class="tags"><ol><li>type</li><li>variable</li><li>experiment</li></ol></div>
+</div>
+<div class="clear"></div>
+<div class="project">
+  <div class="cover">
+    <a href="NESFonts.html">
+      <img src="content/NESFont/cover.png" />
+    </a>
+  </div>
+
+  <div class="title">
+    <a href="NESFonts.html">NES Fonts</a>
+  </div>
+  <div class="tags"><ol><li>type</li><li>8bit</li><li>pixels</li><li>>>>DRAFT<<<</li><li></li></ol></div>
 </div>
 <div class="clear"></div>
 
