--- a/type/fonts.html
+++ b/type/fonts.html
@@ -6,6 +6,7 @@
     <title>HalloType</title>
     <link rel="stylesheet" href="css/common.css" />
     <link rel="stylesheet" href="css/Pan-FarhillDouble01.css" />
+<link rel="stylesheet" href="css/panv2020.css" />
 <link rel="stylesheet" href="css/Marty-Duo_colr.css" />
 <link rel="stylesheet" href="css/Sketch-Fine.css" />
 <link rel="stylesheet" href="css/Mier-Bol.css" />
@@ -19,6 +20,7 @@
 <link rel="stylesheet" href="css/Niccolo-Test_normalized.css" />
 <link rel="stylesheet" href="css/somename.css" />
 <link rel="stylesheet" href="css/Piksels.css" />
+<link rel="stylesheet" href="css/Pan_Clock.css" />
 <link rel="stylesheet" href="css/trees.css" />
 <link rel="stylesheet" href="css/Magnetik.css" />
 <link rel="stylesheet" href="css/Pan-Taper_one.css" />
@@ -51,7 +53,11 @@
 <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
-</div><div class='fontItem lineView Marty-Duo_colr noLowercase'>
+</div><div class='fontItem lineView panv2020'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+
+<p contenteditable="true" class="gridView invisible">A</p>
+<div class='varSup' style='text-transform: capitalize;' id='sliders-panv2020'><input type='range' class='ax' min='2.0' max='70.0' value='2.0' name='panv2020wght' id='panv2020wght'><label for='panv2020wght'>Weight</label><br><input type='range' class='ax' min='0.0' max='312.0' value='0.0' name='panv2020ANGL' id='panv2020ANGL'><label for='panv2020ANGL'>Angle</label><br><input type='range' class='ax' min='30.0' max='50.0' value='40.0' name='panv2020STEP' id='panv2020STEP'><label for='panv2020STEP'>Steps</label><br><input type='range' class='ax' min='0.0' max='2.0' value='0.0' name='panv2020SHAP' id='panv2020SHAP'><label for='panv2020SHAP'>Shapes</label><br></div></div><div class='fontItem lineView Marty-Duo_colr noLowercase'>
 <p contenteditable="true" class="lineView">gunslinger and other songs</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
@@ -103,7 +109,11 @@
 <p contenteditable="true" class="lineView">ZX SPECTRUM</p>
 
 <p contenteditable="true" class="gridView invisible">R</p>
-<div class='varSup' style='text-transform: capitalize;' id='sliders-Piksels'><input type='range' class='ax' min='0.0' max='700.0' value='0.0' name='PikselsPIXL' id='PikselsPIXL'><label for='PikselsPIXL'>Pixel</label><br><input type='range' class='ax' min='1.0' max='7.0' value='1.0' name='PikselsCHAR' id='PikselsCHAR'><label for='PikselsCHAR'>Character Set</label><br><input type='range' class='ax' min='50.0' max='150.0' value='100.0' name='PikselsPROP' id='PikselsPROP'><label for='PikselsPROP'>Proportion</label><br><input type='range' class='ax' min='-50.0' max='50.0' value='0.0' name='Pikselsslnt' id='Pikselsslnt'><label for='Pikselsslnt'>Slant</label><br><input type='range' class='ax' min='0.0' max='360.0' value='0.0' name='PikselsROTA' id='PikselsROTA'><label for='PikselsROTA'>Rotate</label><br></div></div><div class='fontItem lineView trees'>
+<div class='varSup' style='text-transform: capitalize;' id='sliders-Piksels'><input type='range' class='ax' min='0.0' max='700.0' value='0.0' name='PikselsPIXL' id='PikselsPIXL'><label for='PikselsPIXL'>Pixel</label><br><input type='range' class='ax' min='1.0' max='7.0' value='1.0' name='PikselsCHAR' id='PikselsCHAR'><label for='PikselsCHAR'>Character Set</label><br><input type='range' class='ax' min='50.0' max='150.0' value='100.0' name='PikselsPROP' id='PikselsPROP'><label for='PikselsPROP'>Proportion</label><br><input type='range' class='ax' min='-50.0' max='50.0' value='0.0' name='Pikselsslnt' id='Pikselsslnt'><label for='Pikselsslnt'>Slant</label><br><input type='range' class='ax' min='0.0' max='360.0' value='0.0' name='PikselsROTA' id='PikselsROTA'><label for='PikselsROTA'>Rotate</label><br></div></div><div class='fontItem lineView Pan_Clock noLowercasenoUppercase'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+
+<p contenteditable="true" class="gridView invisible">A</p>
+<div class='varSup' style='text-transform: capitalize;' id='sliders-Pan_Clock'><input type='range' class='ax' min='2.0' max='100.0' value='2.0' name='Pan_Clockwght' id='Pan_Clockwght'><label for='Pan_Clockwght'>Weight</label><br><input type='range' class='ax' min='0.0' max='354.0' value='0.0' name='Pan_ClockANGL' id='Pan_ClockANGL'><label for='Pan_ClockANGL'>Angle</label><br><input type='range' class='ax' min='30.0' max='40.0' value='35.0' name='Pan_ClockSTEP' id='Pan_ClockSTEP'><label for='Pan_ClockSTEP'>Steps</label><br></div></div><div class='fontItem lineView trees'>
 <p contenteditable="true" class="lineView">HORTUS BOTANICUS</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
