--- a/NESFonts.html
+++ b/NESFonts.html
@@ -44,13 +44,45 @@
 
     <div id="main">
       <img src='content/NESFont/cover.png'/>
-<p class="description">The fonts in NES games are usually build up by 8x8 bytes per character. By plotting the binary data, the graphic tiles become visibe and the font is exposed. If you know where the font data is located, you can draw the characters into a UFO and generate a fully working font.</p>
+<p class="description">The fonts in NES games are usually build up by 8x8 bytes per character. By plotting the binary data, the graphic tiles become visible and the font is exposed. If you know where the font data is located, you can draw the characters into a UFO and generate a fully working font.</p>
 <p class="description desctop">
-    Here is the graphic data set of Super Mario Bros.<br>
-    In this game the type is monochome, so there is only one layer. Very convenient, the font clearly visible, and extracting is easy.
-
+  Here is the graphic data set of Super Mario Bros.<br />
+  In this game the type is monochome, so there is only one layer. Very
+  convenient, the font clearly visible, and extracting is easy.
 </p>
-<img src='content/NESFont/SMB1.png'/>
+<img src="content/NESFont/SMB1.png" />
+
+<p class="description">
+  For extracting the font, a few parameters are needed:<br />
+  <b>></b> the byte where the font starts <br />
+  <b>></b> order of characters <br /><br />
+  Quite often there is a black character between letters in the rom. I think
+  this is because one is the foreground layer and the next is the background (or
+  vise versa). For now, I just skip every second character.
+</p>
+<a
+  class="icon"
+  href="/Users/thom/Documents/Code/hallotype.github.io/content/NESFont/DrawRom.py?open=1"
+  ><img src="content/NESFont/PyIcon.png" />
+</a>
+
+<p class="description">
+  <br />
+  <a
+    href="/Users/thom/Documents/Code/hallotype.github.io/content/NESFont/DrawRom.py?open=1"
+  >
+    << Download here my <b>DrawRom.py</b> DrawBot script.
+  </a>
+</p>
+<div class="clear"></div>
+<p class="description">
+  From here its a small step to draw the pixels into a glyph...
+</p>
+
+still a draft!still a draft!still a draft!still a draft!still a draft!still a
+draft!still a draft!still a draft!still a draft!still a draft!still a
+draft!still a draft!still a draft!still a draft!still a draft!still a
+draft!still a draft!
 
       <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
