--- a/Pan.html
+++ b/Pan.html
@@ -47,87 +47,114 @@
 <p class="description">Pan is a variable type system. The idea is to slice the glyphs in various ways and draw contours with the slice-data. <br>
 Since the drawings are not compatible, featureSubstitutions are needed. Currently three axes [Angle, Steps, Shape] controle what glyph is shown. A special set of tools was needed to create the GSUB table that can handle this.<br><br>
 
-	I started creating this font system in 2017. Back then, in MacOS, only one axis was working for featureSubstitutions. Now in 2020, it seems that it is still not fully solved in MacOS. In browsers it all works prefectly!
+	I started creating this font system in 2017. Back then, in MacOS, only one axis was working for featureSubstitutions. Now in 2020, it seems that it is still not fully solved in MacOS. In browsers [Chrome / Firefox] it all works prefectly!
 </p>
 <img src='content/pan/SWITCH.gif'/>
+<link rel="stylesheet" href="type/css/Pan_Clock.css" />
+<div
+  class="Pan_Clock noLowercasenoUppercase"
+  id="varUnit"
+  style="background-color: #ffc600; padding-bottom: 24px"
+>
+  <p
+    style="font-size: 266px; font-variation-settings: 'wght' 30"
+    contenteditable="true"
+    class="lineView"
+  >
+    <span class="H">H</span><span class="sep">:</span><span class="M">M</span
+    ><span class="sep">:</span><span class="S">S</span><br />
+  </p>
+  <div></div>
 
-<link rel='stylesheet' href='type/css/Pan_Clock.css'/>
+  <script type="text/javascript">
+    var wght = 30; //
+    // https://codepen.io/jordantart/pen/QyJpyr
+    //
+    function clock_angles(hour, minute, second, milsec) {
+      var minAngle = 360 * (minute / 60);
+      var hourAngle = 360 * ((hour % 12) / 12) + (360 / 12) * (minute / 60);
+      var secAngle = 360 * (second / 60);
+      var milSecAngle = 360 * (milsec / 1000);
 
-<style type="text/css">
-  .Pan_Clock {padding-bottom: 24px;}
-  .Pan_Clock p{font-size:266px;}
-  @media only screen and (max-width: 700px) {
-        .Pan_Clock {padding-bottom: 0px;}
-        #varUnit p{font-size:72px;
-          min-height: 120px;}
+      return [hourAngle, minAngle, secAngle, milSecAngle];
+    }
 
-  }
+    var d = new Date(); // for now
+    //d.getHours(); // => 9
+    //d.getMinutes(); // =>  30
+    //d.getSeconds(); // => 51
+    var t = clock_angles(
+      d.getHours(),
+      d.getMinutes(),
+      d.getSeconds(),
+      d.getMilliseconds()
+    );
+    console.log(t);
+    console.log();
+    const Pan_ClockSliders = document.querySelector("#sliders-Pan_Clock");
 
-</style>
-<div class='Pan_Clock noLowercasenoUppercase' id='varUnit' style="background-color: #FFC600; ">
+    var joopie = setTimeout(Pan_ClockChanger, 0);
+    function Pan_ClockChanger() {
+      setTimeout(Pan_ClockChanger, 5);
+      var d = new Date(); // for now
+      var t = clock_angles(
+        d.getHours(),
+        d.getMinutes(),
+        d.getSeconds(),
+        d.getMilliseconds()
+      );
 
-<p style="font-variation-settings: 'wght' 30;" contenteditable="true" class="lineView"><span class="H">H</span>:<span class="M">M</span>:<span class="S">S</span><br></p><div></div>
+      let fontElementsH = document.querySelectorAll(".H");
+      fontElementsH.forEach(function (fontElement) {
+        fontElement.style.cssText =
+          "font-variation-settings:" +
+          "'wght' " +
+          wght +
+          ",'ANGL' " +
+          t[0] +
+          ",'STEP' " +
+          60;
+      });
 
+      let fontElementsM = document.querySelectorAll(".M");
+      fontElementsM.forEach(function (fontElement) {
+        fontElement.style.cssText =
+          "font-variation-settings:" +
+          "'wght' " +
+          wght +
+          ",'ANGL' " +
+          t[1] +
+          ",'STEP' " +
+          60;
+      });
 
-<script type="text/javascript">
-var wght = 30;		//
-	// https://codepen.io/jordantart/pen/QyJpyr
-	//
-	function clock_angles(hour, minute, second) {
-		var minAngle = 360*(minute/60);
-		var hourAngle = (360*(hour%12/12))+((360/12)*(minute/60));
-		var secAngle = 360*(second/60);
-		
-		return [hourAngle, minAngle, secAngle];
-}
+      let fontElementsS = document.querySelectorAll(".S");
+      fontElementsS.forEach(function (fontElement) {
+        fontElement.style.cssText =
+          "font-variation-settings:" +
+          "'wght' " +
+          wght +
+          ",'ANGL' " +
+          t[2] +
+          ",'STEP' " +
+          60;
+      });
 
-
-var d = new Date(); // for now
-//d.getHours(); // => 9
-//d.getMinutes(); // =>  30
-//d.getSeconds(); // => 51
-var t = clock_angles(d.getHours(), d.getMinutes(), d.getSeconds());
-console.log(t);
-console.log()
-const Pan_ClockSliders = document.querySelector("#sliders-Pan_Clock");
-
-
-var joopie = setTimeout(Pan_ClockChanger, 0);
-function Pan_ClockChanger() {
-	setTimeout(Pan_ClockChanger, 20);
-	var d = new Date(); // for now
-	var t = clock_angles(d.getHours(), d.getMinutes(), d.getSeconds());
-
-	let fontElementsH = document.querySelectorAll(".H");
-	fontElementsH.forEach(function (fontElement) {
-		fontElement.style.cssText =
-			"font-variation-settings:" +
-			"'wght' " + wght
-			+",'ANGL' " + t[0]
-			+",'STEP' " + 60
-		});
-
-	let fontElementsM = document.querySelectorAll(".M");
-	fontElementsM.forEach(function (fontElement) {
-		fontElement.style.cssText =
-			"font-variation-settings:" +
-			"'wght' " + wght
-			+",'ANGL' " + t[1]
-			+",'STEP' " + 60
-		});
-
-	let fontElementsS = document.querySelectorAll(".S");
-	fontElementsS.forEach(function (fontElement) {
-		fontElement.style.cssText =
-			"font-variation-settings:" +
-			"'wght' " + wght
-			+",'ANGL' " + t[2]
-			+",'STEP' " + 60
-		});
-}
-	
-</script>
-</div><p class=""><br><br>Here is a visualisation of my workflow. </p>
+      // let fontElementsSep = document.querySelectorAll(".sep");
+      // fontElementsSep.forEach(function (fontElement) {
+      //   fontElement.style.cssText =
+      //     "font-variation-settings:" +
+      //     "'wght' " +
+      //     wght +
+      //     ",'ANGL' " +
+      //     t[3] +
+      //     ",'STEP' " +
+      //     60;
+      // });
+    }
+  </script>
+</div>
+<p class=""><br><br>Here is a visualisation of my workflow. </p>
 <script  src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/8.7.0/mermaid.min.js"></script>
 <div class="mermaid">
 %%{init: {'securityLevel': 'loose','theme': 'base', 'themeVariables': { 'fontFamily':'Source Code Pro',  'primaryColor': '#00CCCC', 'edgeLabelBackground':'#ffffee', 'tertiaryColor': '#fff0f0'}}}%%
@@ -159,25 +186,65 @@ function Pan_ClockChanger() {
 
 
 </div>
-<link rel='stylesheet' href='type/css/panv2020.css'/>
-<div class='panv2020 varPlay' id='varUnit'>
-
-<p contenteditable="true" class="lineView">AQUILAE</p>
-<div class='varSup ' style='text-transform: capitalize;' id='sliders-panv2020'><input type='range' class='ax' min='2.0' max='70.0' value='2.0' name='panv2020wght' id='panv2020wght'><label for='panv2020wght'>Weight</label><br><input type='range' class='ax' min='0.0' max='312.0' value='0.0' name='panv2020ANGL' id='panv2020ANGL'><label for='panv2020ANGL'>Angle</label><br><input type='range' class='ax' min='30.0' max='50.0' value='40.0' name='panv2020STEP' id='panv2020STEP'><label for='panv2020STEP'>Steps</label><br><input type='range' class='ax' min='0.0' max='2.0' value='0.0' name='panv2020SHAP' id='panv2020SHAP'><label for='panv2020SHAP'>Shapes</label><br></div>
-<script>
-const panv2020Sliders = document.querySelector("#sliders-panv2020");
-panv2020Sliders.oninput = panv2020Changer;
-function panv2020Changer(e) {
-  let fontElements = document.querySelectorAll("div.panv2020");
-  fontElements.forEach(function (fontElement) {
-    fontElement.style.cssText =
-      "font-variation-settings:" +
-"'wght' " + document.querySelector("#panv2020wght").value
-+",'ANGL' " + document.querySelector("#panv2020ANGL").value
-+",'STEP' " + document.querySelector("#panv2020STEP").value
-+",'SHAP' " + document.querySelector("#panv2020SHAP").value
-  });}</script>
+<link rel="stylesheet" href="type/css/panv2020.css" />
+<div class="panv2020 varPlay" id="varUnit">
+  <p contenteditable="true" class="lineView">AQUILAE</p>
+  <div class="varSup" style="text-transform: capitalize" id="sliders-panv2020">
+    <input
+      type="range"
+      class="ax"
+      min="2.0"
+      max="70.0"
+      value="2.0"
+      name="panv2020wght"
+      id="panv2020wght"
+    /><label for="panv2020wght">Weight</label><br /><input
+      type="range"
+      class="ax"
+      min="0.0"
+      max="312.0"
+      value="0.0"
+      name="panv2020ANGL"
+      id="panv2020ANGL"
+    /><label for="panv2020ANGL">Angle</label><br /><input
+      type="range"
+      class="ax"
+      min="30.0"
+      max="50.0"
+      value="40.0"
+      name="panv2020STEP"
+      id="panv2020STEP"
+    /><label for="panv2020STEP">Steps</label><br /><input
+      type="range"
+      class="ax"
+      min="0.0"
+      max="2.0"
+      value="0.0"
+      name="panv2020SHAP"
+      id="panv2020SHAP"
+    /><label for="panv2020SHAP">Shapes</label><br />
+  </div>
+  <script>
+    const panv2020Sliders = document.querySelector("#sliders-panv2020");
+    panv2020Sliders.oninput = panv2020Changer;
+    function panv2020Changer(e) {
+      let fontElements = document.querySelectorAll("div.panv2020");
+      fontElements.forEach(function (fontElement) {
+        fontElement.style.cssText =
+          "font-variation-settings:" +
+          "'wght' " +
+          document.querySelector("#panv2020wght").value +
+          ",'ANGL' " +
+          document.querySelector("#panv2020ANGL").value +
+          ",'STEP' " +
+          document.querySelector("#panv2020STEP").value +
+          ",'SHAP' " +
+          document.querySelector("#panv2020SHAP").value;
+      });
+    }
+  </script>
 </div>
+
       <!-- <div id="bottomline">&nbsp;</div> -->
     </div>
   </body>
