test downoad file

--- a/NESFonts.html
+++ b/NESFonts.html
@@ -62,14 +62,14 @@
 </p>
 <a
   class="icon"
-  href="/Users/thom/Documents/Code/hallotype.github.io/content/NESFont/DrawRom.py?open=1"
+  href="drawbot://github.com/hallotype/hallotype.github.io/blob/master/content/NESFont/DrawRom.py?open=1"
   ><img src="content/NESFont/PyIcon.png" />
 </a>
 
 <p class="description">
   <br />
   <a
-    href="/Users/thom/Documents/Code/hallotype.github.io/content/NESFont/DrawRom.py?open=1"
+    href="https://github.com/hallotype/hallotype.github.io/blob/master/content/NESFont/DrawRom.py"
   >
     << Download here my <b>DrawRom.py</b> DrawBot script.
   </a>
