test download file

--- a/content/NESFont/drawRom.html
+++ b/content/NESFont/drawRom.html
@@ -1,13 +1,13 @@
 <a
   class="icon"
-  href="drawbot://github.com/hallotype/hallotype.github.io/blob/master/content/NESFont/DrawRom.py?open=1"
+  href="https://raw.githubusercontent.com/hallotype/hallotype.github.io/master/content/NESFont/DrawRom.py"
   ><img src="content/NESFont/PyIcon.png" />
 </a>
 
 <p class="description">
   <br />
   <a
-    href="https://github.com/hallotype/hallotype.github.io/blob/master/content/NESFont/DrawRom.py"
+    href="https://raw.githubusercontent.com/hallotype/hallotype.github.io/master/content/NESFont/DrawRom.py"
   >
     << Download here my <b>DrawRom.py</b> DrawBot script.
   </a>
