--- a/index.html
+++ b/index.html
@@ -49,52 +49,52 @@
     <div id="main">
       <div class="project">
   <div class="cover">
-    <a href="Piksels.html">
+    <a href="piksels.html">
       <img src="content/piksels/cover.gif" />
     </a>
   </div>
 
   <div class="title">
-    <a href="Piksels.html">Piksels</a>
+    <a href="piksels.html">Piksels</a>
   </div>
   <div class="tags"><ol><li>type</li><li>pixel</li></ol></div>
 </div>
 <div class="clear"></div>
 <div class="project">
   <div class="cover">
-    <a href="Pan.html">
+    <a href="pan.html">
       <img src="content/pan/cover.png" />
     </a>
   </div>
 
   <div class="title">
-    <a href="Pan.html">Pan</a>
+    <a href="pan.html">Pan</a>
   </div>
   <div class="tags"><ol><li>type</li><li>variable</li><li>experiment</li></ol></div>
 </div>
 <div class="clear"></div>
 <div class="project">
   <div class="cover">
-    <a href="Golf.html">
+    <a href="golf.html">
       <img src="content/wave/cover.gif" />
     </a>
   </div>
 
   <div class="title">
-    <a href="Golf.html">Golf</a>
+    <a href="golf.html">Golf</a>
   </div>
   <div class="tags"><ol><li>type</li><li>variable</li><li>experiment</li></ol></div>
 </div>
 <div class="clear"></div>
 <div class="project">
   <div class="cover">
-    <a href="NESFonts.html">
+    <a href="nesfonts.html">
       <img src="content/NESFont/cover.png" />
     </a>
   </div>
 
   <div class="title">
-    <a href="NESFonts.html">NES Fonts</a>
+    <a href="nesfonts.html">NES Fonts</a>
   </div>
   <div class="tags"><ol><li>type</li><li>8bit</li><li>pixels</li><li>>>>DRAFT<<<</li><li></li></ol></div>
 </div>
