improve mobile css

--- a/content/pan/flowchart.html
+++ b/content/pan/flowchart.html
@@ -1,3 +1,9 @@
+<style>
+    svg {
+        max-height: 300px;
+    }
+</style>
+
 <p class=""><br><br>Here is a visualisation of my workflow. </p>
 <script  src="https://cdnjs.cloudflare.com/ajax/libs/mermaid/8.7.0/mermaid.min.js"></script>
 <div class="mermaid">
