--- a/content/NESFont/SMB.html
+++ b/content/NESFont/SMB.html
@@ -9,7 +9,7 @@
   For extracting the font, a few parameters are needed:<br />
   <b>></b> the byte where the font starts <br />
   <b>></b> order of characters <br /><br />
-  Quite often there is a black character between letters in the rom. I think
+  Quite often there is a blank character between letters in the rom. I think
   this is because one is the foreground layer and the next is the background (or
   vise versa). For now, I just skip every second character.
 </p>
