pan update + angler

--- a/type/fonts.html
+++ b/type/fonts.html
@@ -31,6 +31,7 @@
 <link rel="stylesheet" href="css/Marty-Heavy.css" />
 <link rel="stylesheet" href="css/BexTilt.css" />
 <link rel="stylesheet" href="css/Contrast.css" />
+<link rel="stylesheet" href="css/PanAngler.css" />
 
   </head>
   <body>
@@ -153,7 +154,11 @@
 <p contenteditable="true" class="lineView">OHamburgefonstiv</p>
 
 <p contenteditable="true" class="gridView invisible">A</p>
-</div></div>
+</div><div class='fontItem lineView PanAngler noLowercase'>
+<p contenteditable="true" class="lineView">OHamburgefonstiv</p>
+
+<p contenteditable="true" class="gridView invisible">A</p>
+<div class='varSup' style='text-transform: capitalize;' id='sliders-PanAngler'><input type='range' class='ax' min='0.0' max='350.0' value='0.0' name='PanAnglerANGL' id='PanAnglerANGL'><label for='PanAnglerANGL'>Angle</label><br></div></div></div>
   </body>
   <script src="js/varSupport.js"></script>
   <script src="js/views.js"></script>
